--- a/index.html
+++ b/index.html
@@ -41,5 +41,9 @@
         ,X11 Viola , NeXTStep , Servers , Tools , Mail robot , Library )
       </dd>
     </dl>
+
+    <dl>
+      <dt>Technical</dt>
+    </dl>
   </body>
 </html>
